--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 PORT  = 8000
  
-RAZORPAY_API_KEY = "rzp_test_IfnWx5zMpvkNbC"
+RAZORPAY_API_KEY = "YOUR_RAZOR_PAY_API_KEY"
 
-RAZORPAY_API_SECRET = "G8kAgIWf5Mzyyo8bQrVLRmIX"
+RAZORPAY_API_SECRET = "YOUR_RAZOR_PAY_API_SECRET"
 
 MONGO_URI ="mongodb://127.0.0.1:27017/razor" 
